# Telemetry-Dashboard

./: CMakeLists.txt  README.md  gitignore
backend/: CMakeLists.txt
backend/include/telemetry/: TelemetryServer.h
backend/include/telemetry/api/: RestApi.h  WebSocketApi.h
backend/include/telemetry/models/: ErrorMessage.h  TelemetryData.h
backend/include/telemetry/services/: ErrorService.h  TelemetryService.h  WebSocketService.h
backend/include/telemetry/storage/: IDataStorage.h  InMemoryStorage.h
backend/src/: TelemetryServer.cpp  main.cpp
backend/src/api/: RestApi.cpp  WebSocketApi.cpp
backend/src/models/: ErrorMessage.cpp  TelemetryData.cpp
backend/src/services/: ErrorService.cpp  TelemetryService.cpp  WebSocketService.cpp
backend/src/storage/: InMemoryStorage.cpp
frontend/: CMakeLists.txt
frontend/include/frontend/models/: DeviceData.h  ErrorEntry.h  TelemetryPoint.h
frontend/include/frontend/viewmodels/: TelemetryViewModel.h
frontend/include/frontend/websocket/: WebSocketClient.h
frontend/qml/: DeviceView.qml  ErrorView.qml  Main.qml  TelemetryChartView.qml
frontend/src/: main.cpp
frontend/src/models/: DeviceData.cpp  ErrorEntry.cpp  TelemetryPoint.cpp
frontend/src/viewmodels/: TelemetryViewModel.cpp
frontend/src/websocket/: WebSocketClient.cpp
tools/: device_simulator.py  requirements.txt
